	  there are more than fits on the screen.
	* Use client-supplied window size again; try to detect broken
	  clients and force them to 80x24.
	* Pass window size to watchers via inprogress file; show it on the
	  list.
	* Selecting a game to watch with an uppercase letter attempts to
	  change the window size to the game's via the \033[8;<r>;<c>t
	  sequence.

1.4.3 (2004/02/28)
	* Make ttyplay use the 'strip' value it remembered from last view.
	* Don't fail if client-supplied window size seems incorrect.
	* Added a simple man page.

1.4.2 (2004/02/22)
	* Add a compile-time option to define a static location to look
	  for a configuration file. Will ALWAYS override defconfig values
	  if it is present, so beware.
	* Fixed some eerie race conditions that prevented writefile() from
	  writing a full file all the time. (jilles)
	* Don't write rcfiles if they already exist. (i.e., lost account
	  holders recreating their accounts.
	* Allow administrator to hardcode a dgamelaunch.conf path.
	* Ignore client-supplied window size again.
	* Include dgl-wall, which notifies all logged in users with
	  a mail message.
	* Split common functions into dgl-common.c.

1.4.1 (2004/02/13)
	* Don't explicitly unlock the lock file before fclosing it;
	  this creates a race condition where we might not have finished
	  writing to /dgl-login before we tell people that they can write
	  to it again.
	* Make sure writefile does not get called when using it as a
	  password prompt for new-users
	* Allow user to change his or her email address in the console.
	* Remove some useless cruft in ttywait() [ttyplay.c]

1.4 (2004/02/03)
	* Major cleanups - remove most uses of strcpy() and strcat()
	* A number of virus bugs have been fixed regarding getopt() and
	  other minor issues.
	* Add support for mailing users while they are playing.
	  [nh343-simple_mail.diff is needed]
	* Add a confirmation to the change password screen so people like me